[project]
name = "realtime-virtual-try-on"
version = "0.1.0"
description = ""
authors = [
    {name = "Ahmad10Raza",email = "rjaahmad60@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mediapipe (>=0.10.21,<0.11.0)",
    "torch (>=2.7.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
